@@ -15,7 +15,10 @@
       systems that don't have a usable /proc/<pid>/wchan
       
       when run inside an emacs shell buffer, rlwrap will execute
-      the client in its place (just as when stdin is not a terminal)      
+      the client in its place (just as when stdin is not a terminal)
+
+      --always-echo echoes user input even when the client clears its
+      ECHO flag
 
 0.44  rlwrap doesn't (yet) work with bracketed-paste. As this is
       enabled by default from readline-8.1 onwards, rlwrap disables
